--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -191,6 +191,21 @@
             android:textColor="@color/white"
             android:textSize="14sp"
             />
+        <TextView
+            android:id="@+id/bookmark_this"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            app:layout_constraintTop_toBottomOf="@id/over_view"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:padding="8dp"
+            android:textColor="@color/page_color"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:visibility="gone"
+            android:textAlignment="center"
+            android:text="@string/bookmark_this"
+            android:background="@color/secondaryColor"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
